feat: 🚀 initial commit

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
-{
+{"prettier/prettier": [
+  "error",
+  {
+    "endOfLine": "auto",
+  }
+],
   "extends": [
     "sznm/react",
     "plugin:react/jsx-runtime",
